# robotic_platform_msgs

./: CMakeLists.txt  package.xml
action/: Pick.action  PickUp.action  Place.action  README.md  Replenish.action  ScanSku.action
msg/: GripperStatus.msg
msg/manipulation/: PickPlanResult.msg  PickResult.msg  PickTask.msg  PlacePlanResult.msg  PlaceResult.msg  PlaceTask.msg  RackInfo.msg  ReplenishPose.msg  ReplenishQuantity.msg  RobotStatus.msg  SkuDimension.msg  TableInfo.msg
msg/vision/: CameraDataType.msg  DetectedObject.msg  DetectionResult.msg  LocalizationParam.msg  ObjectPose.msg
srv/: ControlGripper.srv
srv/elevation/: Elevate.srv  Rotate.srv
srv/manipulation/: PickPlan.srv  PlacePlan.srv  SimplePick.srv  SimplePlace.srv
srv/vision/: GetObjectPose.srv  GetObjectPoseTrigger.srv  GetSlotState.srv  GetSlotStateTrigger.srv  InitAlgo.srv  ProcessPointCloud.srv  RespFailedPick.srv  SaveCameraData.srv
